--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/abo
 RSS: false
 # weibo_username:     
 zhihu_username:     
-github_username:    
+github_username: learninghome3344   
 facebook_username:  
 jianshu_username:   
 #twitter_username:   
