--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: FishRedLeaf's Blog
 SEOTitle: 鱼红叶的博客 | FishRedLeaf Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/my_desk.jpeg
 email: yanbingjian1995@163.com
 description: "day day up"
 keyword: "Blog, 博客"
